@@ -51,6 +51,6 @@ public class DeclaracionPlantaProduccionService {
             String[] partes = ultimoFolio.split("-");
             correlativo = Integer.parseInt(partes[2]) + 1;
         }
-        return String.format("%s-%s-%06d", prefijo, anio, correlativo);
+        return "%s-%s-%06d".formatted(prefijo, anio, correlativo);
     }
 }
